--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "name": "Wellness Extension",
     "action": {
         "default_popup": "index.html",
-        "default_icon": ""
+        "default_icon": "ChomeExtLogo.png"
     },
     "permissions": [
         "tabs"
